--- a/redhat-director-scripts/docker/services/trilio-datamover-api.yaml
+++ b/redhat-director-scripts/docker/services/trilio-datamover-api.yaml
@@ -42,6 +42,10 @@ parameters:
     default: '13784'
     description: Trilio Dmapi ssl listen port
     type: string
+  KeystoneRegion:
+    type: string
+    default: 'regionOne'
+    description: Keystone region for endpoint
 
 outputs:
   role_data:
@@ -51,6 +55,29 @@ outputs:
       config_settings:
         trilio::dmapi::dmapi_port: {get_param: DmApiPort}
         trilio::dmapi::dmapi_ssl_port: {get_param: DmApiSslPort}
+      keystone_resources:
+        dmapi:
+          endpoints:
+            public:
+		          make_url:
+                scheme: {get_param: [EndpointMap, TrilioDmApiPublic, protocol]}
+                host: {get_param: [EndpointMap, TrilioDmApiPublic, host]}
+                port: {get_param: [EndpointMap, TrilioDmApiPublic, port]}
+                path: /v2
+            internal:
+		          make_url:
+                scheme: {get_param: [EndpointMap, TrilioDmApiInternal, protocol]}
+                host: {get_param: [EndpointMap, TrilioDmApiInternal, host]}
+                port: {get_param: [EndpointMap, TrilioDmApiInternal, port]}
+                path: /v2
+            admin:
+		          make_url:
+                scheme: {get_param: [EndpointMap, TrilioDmApiAdmin, protocol]}
+                host: {get_param: [EndpointMap, TrilioDmApiAdmin, host]}
+                port: {get_param: [EndpointMap, TrilioDmApiAdmin, port]}
+                path: /v2
+		  region: {get_param: KeystoneRegion}
+          service: 'datamover'
       service_config_settings:
         haproxy:
           tripleo::trilio_datamover_api::haproxy_endpoints:
