--- a/redhat-director-scripts/docker/services/trilio-datamover-api.yaml
+++ b/redhat-director-scripts/docker/services/trilio-datamover-api.yaml
@@ -60,7 +60,15 @@ outputs:
                 service_port: {get_param: DmApiPort}
                 public_ssl_port: {get_param: DmApiSslPort}
                 member_options: [ 'check', 'inter 2000', 'rise 2', 'fall 5' ]
-                haproxy_listen_bind_param: ['transparent']      
+                haproxy_listen_bind_param: ['transparent']
+        mysql:
+          trilio::db::mysql::password: {get_param: TrilioDatamoverPassword}
+          trilio::db::mysql::user: dmapi
+          trilio::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
+          trilio::db::mysql::dbname: dmapi
+          trilio::db::mysql::allowed_hosts:
+            - '%'
+            - "%{hiera('mysql_bind_host')}"                    
       puppet_config:
         config_volume: triliodmapi
         puppet_tags: dmapiconfig
